--- a/app/views/share/_sns_icons.html.erb
+++ b/app/views/share/_sns_icons.html.erb
@@ -1,36 +1,1 @@
-<% if @multiple %>
-    <div id="multiple_first">
-      <div id="ckepop"><span class="jiathis_txt">分享到：</span>
-        <a class="jiathis_button_tsina"></a>
-        <a class="jiathis_button_tqq"></a>
-        <a class="jiathis_button_renren"></a>
-        <a class="jiathis_button_douban"></a>
-      </div>
-    </div>
-    <script type="text/javascript">
-        $("#multiple_first").mouseover(function(){
-            setShare("<%= title %>", "<%= url %>", "<%= summary %>", "<%= image_url %>");
-        });
-    </script>
-<% else %>
-    <div id="ckepop"><% unless defined?(no_content) %><span class="jiathis_txt">分享到：</span> <% end %>
-      <a class="jiathis_button_tsina"></a>
-      <a class="jiathis_button_tqq"></a>
-      <a class="jiathis_button_renren"></a>
-      <a class="jiathis_button_douban"></a>
-    </div>
-
-    <script type="text/javascript" >
-        var jiathis_config={
-            data_track_clickback:true,
-            url:"<%= url %>",
-            summary:"<%= summary %>",
-            title:"<%= title %>",
-            pic:"<%= image_url %>",
-            hideMore:false
-        }
-    </script>
-    <script type="text/javascript" src="http://v2.jiathis.com/code_mini/jia.js?uid=1623461" charset="utf-8"></script>
-<% end %>
-
-
+<%=raw content_no_space(title, summary, url, image_url, float, defined?(no_content)) %>
