--- a/app/views/wineries/_winery_detail.html.erb
+++ b/app/views/wineries/_winery_detail.html.erb
@@ -126,7 +126,8 @@
                   :image_url => sns_image_url(@winery, :thumb_name => :middle_x),
                   :title => sns_title(@winery),
                   :summary => sns_summary(@winery),
-                  :url => request.url %>
+                  :url => request.url,
+                  :float => "normal" %>
        <div class="clear"></div>
      </div> 
    </div>
