--- a/app/views/albums/photo.html.erb
+++ b/app/views/albums/photo.html.erb
@@ -7,17 +7,17 @@
     <div class="content">
       <div class="album_left">
         <div class="title_btn">
-          <h1>
-            <%= @album.name %> 
-            <span class="font12">(共<%= @album.photos_count %>张)</span>
-          </h1>
-        </div>
-        <div class="mb20">
           <div class="btn_action">
             <%= link_to album_show_user_path(@user, @album.id), :class => [:btn_gray] do  %>
              <span>返回该相册</span>
             <% end %>
           </div>
+          <h1>
+            <%= @album.name %>
+            <span class="font12">(共<%= @album.photos_count %>张)</span>
+          </h1>
+        </div>
+        <div class="mb20">
           <%= render :partial => "share/photo_page_number", :locals => {:parent => @album} %>
         </div>
         <div class="photo">
@@ -27,13 +27,14 @@
         <div class="info">
           <%= render "photos/liked"%>
           <div class="share float_r">
-            <%= render "share/sns_icons",
+            <%= render("share/sns_icons",
                      :image_url => sns_image_url(@photo, :thumb_name => :large),
                      :title => sns_title(@user),
                      :summary => "的照片",
-                     :url => request.url %>
+                     :url => request.url,
+                     :float => "right") -%>
           </div>
-          	<div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
+          <div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
         </div>
         <div class="comment">
           <div class="mb20 clearfix">
