--- a/app/views/notes/_follow_and_comment_button.html.erb
+++ b/app/views/notes/_follow_and_comment_button.html.erb
@@ -15,25 +15,16 @@
   <span class="share_sns">
     <a class="btn_iw hs" href="javascript:void(0);"><span><em>分享</em></span></a>
     <div class="dropbox" style="display:none;">
-      <div class="com_s sns clearfix" id="sns<%= item_id %>">
-      <div id="ckepop">
-          <a class="jiathis_button_tsina"></a>
-          <a class="jiathis_button_tqq"></a>
-          <a class="jiathis_button_renren"></a>
-          <a class="jiathis_button_douban"></a>
-      </div>
-      <div class="clear"></div>   
+      <div class="com_s sns clearfix">
+        <% image_url = app_note[:photo].images ? app_note[:photo].images(:version => :customer, :pattern => '590x590').first : nil %>
+         <%= render "share/sns_icons",
+            :image_url =>  image_url,
+            :title => sns_title(local_note),
+            :summary => note_sns_summary(local_note),
+            :url => sns_url(local_note),
+            :float => "normal",
+            :no_content => true %>
       </div>
     </div>
   </span>
 </div>
-<script type="text/javascript">
-    $("#sns<%= item_id %>").mouseover(function(){
-        setShare(
-          "<%= sns_title(local_note) %>", 
-        "<%= sns_url(local_note) %>", 
-        "<%= note_sns_summary(local_note) %>", 
-        "<%= app_note[:photo].images(:version => :customer, :pattern => '590x590').first %>"
-        );
-    }); 
-</script>
