--- a/app/views/photos/event_photo_detail.html.erb
+++ b/app/views/photos/event_photo_detail.html.erb
@@ -25,11 +25,12 @@
           <div class="info">
             <%= render :partial => 'liked' %>
             <div class="share float_r">
-              <%= render "share/sns_icons_second",
+              <%= render "share/sns_icons",
                 :image_url => sns_image_url(@photo, :thumb_name => :large),
                 :title => sns_title(@event),
                 :summary => "的图片",
-                :url => request.url %>
+                :url => request.url,
+                :float => "right" %>
               </div>
               <div><%= @photo.views_count %>浏览 | <%= @photo.comments_count %>评论</div>
             </div>
