--- a/app/views/photos/wine_photo_detail.html.erb
+++ b/app/views/photos/wine_photo_detail.html.erb
@@ -30,7 +30,8 @@
 	                    :image_url => sns_image_url(@photo, :thumb_name => :large),
 	                    :title => sns_title(@wine_detail),
 	                    :summary => "的图片",
-	                    :url => request.url %>
+	                    :url => request.url,
+	                    :float => "right" %>
 				</div>
 				<div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
 			</div>
