--- a/app/views/share/_follow_and_comment_button.html.erb
+++ b/app/views/share/_follow_and_comment_button.html.erb
@@ -23,24 +23,16 @@
   	<a class="btn_iw hs" href="javascript:void(0);"><span><em>分享</em></span></a>
   	<div class="dropbox" style="display:none;">
 	    <div class="com_s sns clearfix" id="sns<%= item_id %>">
-			<div id="ckepop">
-			  	<a class="jiathis_button_tsina"></a>
-			  	<a class="jiathis_button_tqq"></a>
-			  	<a class="jiathis_button_renren"></a>
-			  	<a class="jiathis_button_douban"></a>
-			</div>
+        <%= render :partial => "share/sns_icons", :locals => {
+          :title => sns_title(parent),
+          :summary => sns_summary(parent),
+          :url => sns_url(parent),
+          :image_url => sns_image_url(parent, :thumb_name => :large),
+          :float => "normal",
+          :no_content => true
+        } %>
 			<div class="clear"></div> 	
 	    </div>
 		</div>
   </span>
 </div>
-<script type="text/javascript">
-    $("#sns<%= item_id %>").mouseover(function(){
-        setShare(
-        	"<%= sns_title(parent) %>", 
-    		"<%= sns_url(parent) %>", 
-    		"<%= sns_summary(parent) %>", 
-    		"<%= sns_image_url(parent, :thumb_name => :large) %>"
-        );
-    });	
-</script>
