--- a/app/views/wine_details/share/_buttons.html.erb
+++ b/app/views/wine_details/share/_buttons.html.erb
@@ -6,7 +6,8 @@
         :image_url => sns_image_url(@wine_detail, :thumb_name => :large),
         :title => sns_title(@wine_detail),
         :summary => sns_summary(@wine_detail),
-        :url => request.url %>
+        :url => request.url,
+        :float => "right" %>
 </div>
 <div>
 	
