清除无用代码

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -20,3 +20,4 @@
 </div> 
 <p align="center" class="end_waterfall_text_info"></p>
 <%= render "layouts/waterfall_js" %>
+<%= javascript_include_tag 'waterfall_comment_follow' %>
