--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -101,7 +101,7 @@
                           :summary => note_sns_summary(@local_note),
                           :url => sns_url(@local_note),
                           :float => "normal",
-                          :no_content => true,
+                          :no_content => true
                            %>
             </div>
           </div>
