--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -59,3 +59,6 @@ dd.info h3.en a {font-weight:normal;color:#666;}
 .notes #manage div a.icon_public {background-position:8px 6px;}
 .notes #manage div a.icon_member {background-position:10px 7px;}
 .notes #manage div a.icon_members {background-position:10px 7px;}
+
+.publish_share a {position:relative;margin-right:10px;}
+.publish_share a span {position:absolute;left:30px;top:12px;}
