--- a/app/views/notes/_follow_and_comment_button.html.erb
+++ b/app/views/notes/_follow_and_comment_button.html.erb
@@ -16,7 +16,7 @@
     <a class="btn_iw hs" href="javascript:void(0);"><span><em>分享</em></span></a>
     <div class="dropbox" style="display:none;">
       <div class="com_s sns clearfix">
-        <% image_url = app_note[:photo].images ? app_note[:photo].images(:version => :customer, :pattern => '590x590').first : nil %>
+        <% image_url = app_note[:photo].sns_share_url %>
          <%= render "share/sns_icons",
             :image_url =>  image_url,
             :title => sns_title(local_note),
