--- a/app/views/friends/sync.html.erb
+++ b/app/views/friends/sync.html.erb
@@ -33,6 +33,9 @@
           <% if params[:sns_name] == "weibo" %>
               <%= link_to image_tag("common/btn_syn_weibo.jpg", :title => "微博" ),
                   user_omniauth_authorize_path(:weibo) %>
+          <% elsif params[:sns_name] == "qq" %>
+            <%= link_to image_tag("common/btn_syn_qq.jpg", :title => "qq微博" ),
+                  user_omniauth_authorize_path(:tqq2) %>
           <% else %>
             <%= link_to_sync_button params[:sns_name].to_s, new_sns_friends_path(:sns_name => params[:sns_name]) %>
           <% end %>
