--- a/app/views/notes/share.html.erb
+++ b/app/views/notes/share.html.erb
@@ -11,12 +11,12 @@
           <% if current_user.check_oauth?('weibo') %>
             <input type="hidden" name="sns_type[]" value="weibo"/>
             <%= link_to "javascript:void(0);" do %>
-              <%= image_tag "common/icon_sina_on.png", :alt => "新浪微博", :width => "44", :height => "44", :align => "absmiddle", :class => "image_on" %>
+              <%= image_tag "common/icon_sina_on.png", :alt => "新浪微博", :width => "44", :height => "44", :align => "absmiddle", :class => "image_on" -%>
             <% end %>
           <% else %>
             <input type="hidden" name="sns_type[]" value="weibo" disabled="disabled" />
             <%= link_to "javascript:void(0);", :class => "non_connect" do %>
-              <%= image_tag "common/icon_sina_off.png", :alt => "新浪微博", :width => "44", :height => "44", :align => "absmiddle", :class => "share_weibo_image" %>
+              <%= image_tag "common/icon_sina_off.png", :alt => "新浪微博", :width => "44", :height => "44", :align => "absmiddle", :class => "share_weibo_image" -%>
             <% end %>
           <% end %>
         </span>
@@ -24,12 +24,12 @@
           <% if current_user.check_oauth?('qq') %>
             <input type="hidden"  name="sns_type[]" value="qq"/>
             <%= link_to "javascript:void(0);" do %>
-              <%= image_tag "common/icon_qq_on.png", :alt => "腾讯微博", :width => "44", :height => "44", :align => "absmiddle", :class => "image_on" %>
+              <%= image_tag "common/icon_qq_on.png", :alt => "腾讯微博", :width => "44", :height => "44", :align => "absmiddle", :class => "image_on" -%>
             <% end %>
           <% else %>
             <input type="hidden" name="sns_type[]" value="qq" disabled="disabled"/>
             <%= link_to "javascript:void(0);", :class => "non_connect" do %>
-              <%= image_tag "common/icon_qq_off.png", :alt => "腾讯微博", :width => "44", :height => "44", :align => "absmiddle", :class => "share_qq_image" %>
+              <%= image_tag "common/icon_qq_off.png", :alt => "腾讯微博", :width => "44", :height => "44", :align => "absmiddle", :class => "share_qq_image" -%>
             <% end %>
           <% end %>
         </span>
@@ -37,12 +37,12 @@
           <% if current_user.check_oauth?('douban') %>
             <input type="hidden" name="sns_type[]" value="douban"/>
             <%= link_to "javascript:void(0);" do %>
-              <%= image_tag("common/icon_douban_on.png", :alt => "豆瓣", :width => "44", :height => "44", :align => "absmiddle", :class => "image_on") %>
+              <%= image_tag("common/icon_douban_on.png", :alt => "豆瓣", :width => "44", :height => "44", :align => "absmiddle", :class => "image_on") -%>
             <% end %>
           <% else %>
             <input type="hidden" name="sns_type[]" value="douban"  disabled="disabled"/>
             <%= link_to "javascript:void(0);", :class => "non_connect" do %>
-              <%= image_tag "common/icon_douban_off.png", :alt => "豆瓣", :width => "44", :height => "44", :align => "absmiddle", :class => "share_douban_image" %>
+              <%= image_tag "common/icon_douban_off.png", :alt => "豆瓣", :width => "44", :height => "44", :align => "absmiddle", :class => "share_douban_image" -%>
             <% end %>
           <% end %>
         </span>
@@ -88,7 +88,7 @@
       }else if (patt_douban.test(type)){
         openSns({url:"<%= new_sns_friends_url(:sns_name => 'douban') %>", style:"width=700, height=580"});
       }else if (patt_qq.test(type)){
-        openSns({url:"<%= new_sns_friends_url(:sns_name => 'qq') %>", style:"width=840, height=830"});
+        openSns({url:'<%= "#{root_url[0..-2]}#{user_omniauth_authorize_path(:tqq2)}" %>', style:"width=840, height=830"});
       }
       return false;
     }else{
