截取瀑布流评论的文字.

--- a/app/views/share/_short_comment.html.erb
+++ b/app/views/share/_short_comment.html.erb
@@ -6,7 +6,7 @@
         <p class="username">
             <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true) %>
         </p>
-        <p class="content"><%= comment.body %></p>
+        <p class="content"><%= truncate_u(comment.body, 50) %></p>
     </div>
     <div class="clear"></div>
 </li>
