API：判断sns用户是否已经绑定...

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :js do %>
-  <%= javascript_include_tag :notes_home %>
+  <%#= javascript_include_tag :notes_home %>
 <% end %>
 <% content_for :title, @title%>
 <% content_for :css  do %>
