--- a/app/views/notes/add_step_one.html.erb
+++ b/app/views/notes/add_step_one.html.erb
@@ -1,10 +1,10 @@
+<% content_for :title, @title %>
+<% content_for :css do %>
+	<%= stylesheet_link_tag :hp, :add %>
+<% end %>
 <div class="whitespace addwine">
     <%= render "notes/addwine_step", :step => "step_fir" %>
     <div class="search">
         <%= render :partial => "notes/search_wine", :object => @search %>
     </div>
 </div>
- 
-<% content_for :css do %>
-<%= stylesheet_link_tag :hp, :add %>
-<% end %>
