--- a/app/views/wine_details/add_step_one.html.erb
+++ b/app/views/wine_details/add_step_one.html.erb
@@ -1,12 +1,10 @@
+<% content_for :title, @title %>
+<% content_for :css do %>
+	<%= stylesheet_link_tag :hp, :add %>
+<% end %>
 <div class="whitespace addwine">
   <%= render "wine_details/addwine_step", :step => "step_fir" %>
   <div class="search">
     <%= render :partial => "wine_details/search_wine", :object => @search %>
   </div>
 </div>
-
-
-
-<% content_for :css do %>
-<%= stylesheet_link_tag :hp, :add %>
-<% end %>
