--- a/public/template/verify_apply.html
+++ b/public/template/verify_apply.html
@@ -47,6 +47,10 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="step_verify">
                 <div class="step_fir"></div>
           </div>
+          <div class="v_state">
+          	<p>认证状态：认证中/通过认证/未通过认证</p>
+            <p>驳回理由：<span class="f_reason">请输入身份证号码</span></p>
+          </div>
           <div class="myform mb30">
             <form id="form" name="form" method="post" action="#">
             <table class="form" width="100%" border="0" cellspacing="0" cellpadding="0">
