--- a/public/template/user_profile.html
+++ b/public/template/user_profile.html
@@ -51,6 +51,9 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                       xiaoying@test.com <a href="user_password.html">修改密码</a>
                    </div>
                    <div class="required">
+               		<label><span>*</span>认证</label>
+                   <a href="#">申请认证</a></div>
+               <div class="required">
                        <label class="vm"><span>*</span>昵称</label>
                        <input name="text" type="text" class="text name" value="不良夏生" /> 
                    </div>
