--- a/public/template/myhp.html
+++ b/public/template/myhp.html
@@ -47,7 +47,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="hp_userimg"><a href="myhp.html"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
                 <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>某个名字很长很长的人的酒窖</span></a></div>
-                <div class="username">不良夏生 <a href="verify.html"><span class="user_v"></span></a><span class="v_apply"><a href="verify_intro.html">申请认证</a></span></div>
+                <div class="username">不良夏生 <a href="verify.html"><span class="user_v"></span></a><span class="v_title">某某报社财经记者 | <span class="v_apply"><a href="verify_intro.html">申请认证</a></span></span> </div>
                 <div class="mystatu"><p>准备小宇宙爆发...<span><a href="#">修改</a></span></p>
                 <p>博客：<a href="#">http://test.blogbus.com</a></p></div>
                 <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注</span><span class="cancl_fol mr5"> <a href="#">(取消)</a></span><a href="#" class="btn_gray mr5"><span>加关注</span></a><a class="icon_mail" href="#">发私信</a></div>
