--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -653,8 +653,6 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 .user_v {background-position:-59px -70px;width:20px;height:17px;}
 .v_apply {font-size:12px;font-weight:normal;line-height:17px;}
 .v_apply a, .v_apply a:hover {color:#663300;}
-<<<<<<< HEAD
-=======
 .v_state {background-color:#d5edf8;padding:5px 10px;margin: 0 0 20px 0;}
 .v_state .f_reason {color:#F00;}
->>>>>>> template/album
+.v_title {font-size:12px;color:#999;font-weight:normal;}
