--- a/app/views/settings/basic.html.erb
+++ b/app/views/settings/basic.html.erb
@@ -20,6 +20,10 @@
         <%= link_to "修改密码", update_password_settings_path %>
       </div>
       <div class="required">
+        <label>认证</label>
+        <%= raw verify_info %>
+      </div>
+      <div class="required">
         <label class="vm"><span>*</span>昵称</label>
         <%= f.text_field :username , :class => "text name"%>
       </div>
