--- a/app/views/verifies/edit.html.erb
+++ b/app/views/verifies/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title%>
 <% content_for :js do %>
     <%= javascript_include_tag "verifies" %>
 <% end %>
@@ -6,11 +7,14 @@
   <div class="step_verify">
     <div class="step_fir"></div>
   </div>
+  <div class="v_state">
+    <p>认证状态：<%= audit_status %></p>
+    <% if audit_note %>
+        <p>驳回理由：<span class="f_reason"><%= audit_note %></span></p>
+    <% end %>
+  </div>
+
   <div class="myform mb30">
-    <p>
-      审核状态: <%= audit_status %>  <br/>
-    <%= audit_note %>
-      </p>
     <%= form_for @verify_form, :method => :put do |f| %>
         <%= render "form", :f => f %>
     <% end %>
