Access Identify photo with symlink file.

--- a/app/views/verifies/_form.html.erb
+++ b/app/views/verifies/_form.html.erb
@@ -13,7 +13,7 @@
   </tr>
   <tr>
     <th valign="top">昵称</th>
-    <td><strong>不良夏生</strong></td>
+    <td><strong><%= @verify_form.username %></strong></td>
   </tr>
   <tr>
     <th><span class="red">*</span>真实姓名</th>
@@ -35,10 +35,10 @@
   </tr>
   <tr>
     <th>&nbsp;</th>
-    <td><span class="gray">请完善您的联系人信息，以下您所提交的材料仅供新浪认证使用，不会对外公开，请放心填写。</span> </td>
+    <td><span class="gray">请完善您的联系人信息，以下您所提交的材料仅供iWine认证使用，不会对外公开，请放心填写。</span> </td>
   </tr>
   <tr>
-    <th><span class="red">*</span>电子邮箱</th>
+    <th>电子邮箱</th>
     <td><%= @verify_form.email %></td>
   </tr>
   <tr>
