--- a/app/views/share/_sns_icons.html.erb
+++ b/app/views/share/_sns_icons.html.erb
@@ -1,1 +1,1 @@
-<%=raw content_no_space(title, summary, url, image_url, float, defined?(no_content)) %>
+<%=raw content_no_space(title, summary, url, image_url, 'right', defined?(no_content)) %>
